package via.easyflow.modules.project.api.model

data class ProjectDefaultRoleModel(
    val defaultRoleId: String?,
    val projectId: String,
    val projectRoleId: String,
) {
}