package via.easyflow.modules.project.api.model

data class ProjectOwnerModel(
    var userId: String,
    var projectId: String,
)